@@ -7,6 +7,7 @@ Version 5.9.0 (XXX 2021)
  * English dict: fix problems with "just/only".
  * English dict: work on hesitation markers.
  * Fix multi-threading mem-leak. #1149
+ * Provide emscripten javascript wrapper for the command-line parser.
 
 Version 5.8.1 (8 January 2021)
  * Fix macOS/SunOS build break.
